# ansible-role-meilisearch

./: .ansible-lint  .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  EXAMPLES.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: ci.yml  pr-title.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: argument_specs.yml  main.yml
molecule/ci/: molecule.yml
molecule/config_options/: converge.yml  molecule.yml  side_effect.yml  verify.yml
molecule/default/: collections.yml  converge.yml  create.yml  destroy.yml  molecule.yml  verify.yml
molecule/http_addr/: converge.yml  molecule.yml  verify.yml
molecule/negative/: converge.yml  molecule.yml  requirements.yml  verify.yml
molecule/production_master_key/: converge.yml  molecule.yml  verify.yml
molecule/upgrade_dump/: collections.yml  converge.yml  molecule.yml  side_effect.yml  verify.yml
molecule/upgrade_dumpless/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/vagrant/: converge.yml  molecule.yml  verify.yml
tasks/: binary_facts.yml  configure.yml  download_binary.yml  fetch_keys.yml  install.yml  main.yml  resolve_http_addr.yml  service.yml  setup.yml  stop_import_process.yml  upgrade.yml  upgrade_dump.yml  upgrade_dumpless.yml  validate.yml  validate_upgrade_config.yml  version_check.yml
templates/: meilisearch.env.j2  meilisearch.service.j2  meilisearch.toml.j2
vars/: main.yml
