[project]
name = "meilisearch"
version = "0"
description = "Install and configure Meilisearch as a systemd service on Linux systems"
requires-python = ">=3.12"
dependencies = []

# A role is not a distributable package — don't build/install this dir as a wheel.
[tool.uv]
package = false

# Dev toolchain. `dev` is synced by default (`uv sync`) and drives the docker
# scenarios via molecule's built-in delegated driver (no molecule-plugins needed;
# `docker` is the SDK that community.docker requires).
[dependency-groups]
dev = [
    "ansible-core>=2.21,<2.22",
    "molecule>=26,<27",
    "docker>=7",
    "ansible-lint>=26,<27",
    "yamllint>=1.35",
]
